# Wherry

./: .gitignore  LICENSE  LoFlum - Standalone.html  README.md  Wherry New Design (standalone).html  index.html  package.json  todo.md  vite.config.ts
src/: App.svelte  Cargo.toml  app.css  commands.rs  domain.rs  lib.rs  main.rs  settings.rs  storage.rs  tauri.conf.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: connection.rs  fs.rs  mod.rs  sites.rs  transfer.rs
src-tauri/src/domain/: connection.rs  file_entry.rs  mod.rs  site.rs  transfer.rs
src-tauri/src/fs/: local.rs  remote.rs
src-tauri/src/protocols/: ftp.rs  mod.rs  sftp.rs
src-tauri/src/storage/: db.rs  keychain.rs  mod.rs
src-tauri/src/transfer/: manager.rs  mod.rs  progress.rs  queue.rs  task.rs  worker.rs
src/capabilities/: default.json
src/domain/: connection.rs  error.rs  file_entry.rs  mod.rs  site.rs  transfer.rs  window_state.rs
src/fs/: local.rs  remote.rs
src/i18n/: mod.rs
src/i18n/strings/: common.rs  dialogs.rs  mod.rs  panels.rs  settings.rs  toolbar.rs  welcome.rs
src/icons/: icon.icns
src/lib/: types.ts
src/lib/components/: StatusBar.svelte
src/lib/components/Dialogs/: NewConnectionDialog.svelte
src/lib/components/Panes/: FilePane.svelte  LocalPane.svelte  RemotePane.svelte
src/lib/components/Queue/: TransferQueue.svelte
src/lib/components/Tabs/: Tabs.svelte
src/lib/components/Toolbar/: Toolbar.svelte
src/lib/stores/: connection.svelte.ts
src/protocols/: ftp.rs  mod.rs  sftp.rs
src/protocols/ftp/: mod.rs  ops.rs  transfer.rs
src/protocols/sftp/: hostkey.rs  mod.rs  ops.rs  transfer.rs
src/storage/: db.rs
src/storage/db/: bookmarks.rs  history.rs  mod.rs  settings.rs  sites.rs
src/tests/: commands_test.rs
src/transfer/: progress.rs  queue.rs  worker.rs
src/transfers/: mod.rs  queue.rs  worker.rs
src/ui/: app.rs  dock.rs  icons.rs  menu.rs  mod.rs  state.rs  theme.rs
src/ui/app/: dialogs.rs  mod.rs  ops.rs  poll.rs  results.rs  screens.rs  visuals.rs  welcome.rs
src/ui/app/settings/: about.rs  connections.rs  general.rs  mod.rs  nav.rs  prefs.rs  transfers.rs
src/ui/dialogs/: connection.rs
src/ui/dialogs/connection/: actions.rs  form.rs  history.rs  mod.rs  view.rs
src/ui/panels/: file_pane.rs  local_pane.rs  mod.rs  queue.rs  remote_pane.rs  sidebar.rs  status_bar.rs  tabs.rs  toolbar.rs
src/ui/panels/file_pane/: mod.rs  row.rs  sort.rs  table.rs
src/ui/panels/local_pane/: actions.rs  bars.rs  mod.rs
src/ui/panels/remote_pane/: actions.rs  bars.rs  mod.rs
src/ui/panels/toolbar/: actions.rs  buttons.rs  history.rs  mod.rs
src/ui/state/: defaults.rs  mod.rs  types.rs
src/ui/widgets/: button.rs  context_menu.rs  mod.rs  modal.rs  overlay.rs  row.rs
(+50 files in other folders)
