[package]
name = "wherry"
version = "0.1.0"
edition = "2024"
license = "GPL-3.0-only"

[lib]
name = "wherry_lib"
path = "lib.rs"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "wherry"
path = "main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
rusqlite = { version = "0.31", features = ["bundled"] }
suppaftp = { version = "6", features = ["async", "async-native-tls"] }
ssh2 = "0.9"
uuid = { version = "1", features = ["v4"] }
dirs = "5"
tracing = "0.1"
tracing-subscriber = "0.3"
chrono = "0.4"
futures-lite = "2"

